<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvFormula"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/formula"
        android:textColor="@color/light_gray"
        android:textSize="30sp"
        android:fontFamily="@font/montserrat_medium"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="end"/>

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:fontFamily="@font/montserrat_medium"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tvFormula"
        android:gravity="end"/>
    
    <GridLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResult"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="10dp"
        android:rowCount="5"
        android:columnCount="4">

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/clear"
            android:textSize="30sp"
            android:fontFamily="@font/montserrat_medium"
            android:layout_columnSpan="2"
            android:layout_rowWeight="1"
            android:layout_columnWeight="2"
            app:cornerRadius="15dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/light_blue"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/plus"
            android:textSize="30sp"
            android:fontFamily="@font/montserrat_medium"
            android:layout_columnSpan="1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            app:cornerRadius="15dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/light_blue"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/divide"
            android:textSize="30sp"
            android:fontFamily="@font/montserrat_medium"
            android:layout_columnSpan="1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            app:cornerRadius="15dp"
            android:backgroundTint="@color/light_blue"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/seven"
            android:textSize="30sp"
            android:fontFamily="@font/montserrat_medium"
            android:layout_columnSpan="1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            app:cornerRadius="15dp"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/eight"
            android:textSize="30sp"
            android:fontFamily="@font/montserrat_medium"
            android:layout_columnSpan="1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            app:cornerRadius="15dp"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/nine"
            android:textSize="30sp"
            android:fontFamily="@font/montserrat_medium"
            android:layout_columnSpan="1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            app:cornerRadius="15dp"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/multiple"
            android:textSize="30sp"
            android:fontFamily="@font/montserrat_medium"
            android:layout_columnSpan="1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            app:cornerRadius="15dp"
            android:backgroundTint="@color/light_blue"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/four"
            android:textSize="30sp"
            android:fontFamily="@font/montserrat_medium"
            android:layout_columnSpan="1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            app:cornerRadius="15dp"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/five"
            android:textSize="30sp"
            android:fontFamily="@font/montserrat_medium"
            android:layout_columnSpan="1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            app:cornerRadius="15dp"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/six"
            android:textSize="30sp"
            android:fontFamily="@font/montserrat_medium"
            android:layout_columnSpan="1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            app:cornerRadius="15dp"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/minus"
            android:textSize="30sp"
            android:fontFamily="@font/montserrat_medium"
            android:layout_columnSpan="1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            app:cornerRadius="15dp"
            android:backgroundTint="@color/light_blue"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/one"
            android:textSize="30sp"
            android:fontFamily="@font/montserrat_medium"
            android:layout_columnSpan="1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            app:cornerRadius="15dp"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/two"
            android:textSize="30sp"
            android:fontFamily="@font/montserrat_medium"
            android:layout_columnSpan="1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            app:cornerRadius="15dp"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/three"
            android:textSize="30sp"
            android:fontFamily="@font/montserrat_medium"
            android:layout_columnSpan="1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            app:cornerRadius="15dp"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/equal"
            android:textSize="30sp"
            android:fontFamily="@font/montserrat_medium"
            android:layout_rowSpan="2"
            android:layout_rowWeight="2"
            android:layout_columnWeight="1"
            app:cornerRadius="15dp"
            android:backgroundTint="@color/light_blue"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/zero"
            android:textSize="30sp"
            android:fontFamily="@font/montserrat_medium"
            android:layout_columnSpan="2"
            android:layout_rowWeight="1"
            android:layout_columnWeight="2"
            app:cornerRadius="15dp"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/dot"
            android:textSize="30sp"
            android:fontFamily="@font/montserrat_medium"
            android:layout_columnSpan="1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            app:cornerRadius="15dp"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"/>


    </GridLayout>



</androidx.constraintlayout.widget.ConstraintLayout>